# OpenAlbion

./: .gitignore  .rustfmt.toml  Cargo.toml  GUIDE.md  HISTORY_REPORT.md  LICENSE  Makefile  README.md  build.rs  flake.nix  license  package.json  readme.md  test.txt
OpenAlbion/: Cargo.toml
OpenAlbion/src/: main.rs
OpenAlbion/src/renderer/: assets.rs  mod.rs
OpenAlbion/src/state/: input.rs  mod.rs
app/: .gitignore  rollup.config.js
cli/: Cargo.toml
crates/client/: Cargo.toml  game.rs  main.rs  reader.rs  render.rs  window.rs
crates/client/game/: action.rs  event.rs
crates/client/reader/: big.rs
crates/data_formats/: Cargo.toml  readme.md
crates/data_formats/src/: format.rs  lib.rs  util.rs
crates/data_formats/src/format/: big.rs  tng.rs  wad.rs
crates/data_formats/src/format/tng/: tree.rs
crates/data_formats/src/util/: binary.rs  kv.rs  text.rs
crates/data_formats/tests/: wad_test.rs
crates/defable/: Cargo.toml  Makefile  package-lock.json  package.json  readme.md  rollup.config.js
crates/defable/app/: app.js  app.svelte  index.html  main.js  style.scss
crates/defable/app/components/: file-select.svelte  mods.svelte  options.svelte
crates/defable/app/styles/: fonts.scss  inputs.scss
crates/defable/native/: Cargo.toml
crates/defable/native/src/: lib.rs
crates/defable/src/: main.rs
crates/defable/src/commands/: app.rs  cheat.rs  lev.rs
crates/defable_launcher/native/: Cargo.toml  build.rs
crates/defable_launcher/native/src/: lib.rs
crates/fable_cheat/: Cargo.toml  readme.md
crates/fable_cheat/src/: lib.rs
crates/fable_dll_inject/: Cargo.toml
crates/fable_dll_inject/src/: lib.rs
crates/fable_hack/: Cargo.toml  readme.md
crates/fable_hack/src/: lib.rs
crates/fable_injector/: Cargo.toml  readme.md
crates/fable_injector/src/: lib.rs
crates/fable_injector_32bit_helper/: Cargo.toml  readme.md
crates/fable_injector_32bit_helper/src/: main.rs
crates/fable_level/: Cargo.toml  readme.md
crates/fool/: Cargo.toml  main.rs  readme.md
crates/fool/src/: main.rs  subcommand.rs
crates/fool/src/subcommand/: lev.rs  tng.rs  wad.rs
defable/: Cargo.toml  build.rs  readme.md
defable.netlify.com/: Makefile
defable/.cargo/: config
defable/src/: commands.rs  lib.rs  main.rs
defable/src/commands/: cheat.rs  lev.rs  wad.rs
defable/wix/: main.wxs
docs/: data.md  fable-formats.md
ember/: Cargo.toml  readme.md
ember/src/: lib.rs
ember_build/: Cargo.toml  readme.md
ember_build/src/: lib.rs
engine/client/: Cargo.toml
fable-data/: Cargo.toml  readme.md
fable2/: Cargo.toml
fable_bindgen/: Cargo.toml  readme.md
fable_binding/: Cargo.toml  build.rs  readme.md
fable_blender/: .gitignore  Cargo.toml  Makefile  fable_blender.py
fable_bot/: Cargo.toml
fable_cheat/: Cargo.toml
fable_data/: Cargo.toml  build.rs  readme.md
fable_data/src/: bba.rs  bbm.rs  big.rs  bncfg.rs  bncfg_parser.lalrpop  bwd.rs  bytes.rs  crc32.rs  dat.rs  def.rs  def.xml  def_bin.rs  defbin.rs  entry.rs  fields.rs  fields_parser.lalrpop  gtg.rs  gtg_parser.lalrpop  ini.rs  ini_parser.lalrpop  lev.rs  lib.rs  lug.rs  lut.rs  lzo.rs  met.rs  model.rs  qst.rs  qst_parser.lalrpop  save.rs  script.rs  script_parser.lalrpop  shared.rs  stb.rs  texture.rs  tng.rs  tng_parser.lalrpop  wad.rs  wld.rs  wld_parser.lalrpop
fable_data/src/big/: anim.rs  decode.rs  mesh.rs  mod.rs  texture.rs
fable_data/src/bwd/: mod.rs
fable_data/src/def/: decode.rs  mod.rs  xml.rs
fable_data/src/def_bin/: decode.rs
fable_data/src/gtg/: decode.rs
fable_data/src/ini/: mod.rs
fable_data/src/lev/: decode.rs  mod.rs
fable_data/src/qst/: decode.rs  mod.rs
fable_data/src/shared/: bytes.rs  crc.rs  error.rs  format.rs  mod.rs  nom.rs  script.rs  subsource.rs  text.rs
fable_data/src/stb/: decode.rs  mod.rs  stb_lev.rs
fable_data/src/tng/: decode.rs  mod.rs
fable_data/src/wad/: encode.rs  lev.rs  mod.rs  tng.rs
fable_data/src/wld/: decode.rs  mod.rs
fable_edit/: .gitignore  Cargo.toml  Makefile  README.md  package-lock.json  package.json  rollup.config.js
fable_edit/native/: Cargo.toml
fable_edit/native/src/: lib.rs
fable_format/: Cargo.toml
fable_gltf/: Cargo.toml
fable_gltf/src/: lib.rs
fable_hack_randize/: Cargo.toml
fable_hack_tas/: Cargo.toml
fable_js/: README.md  package.json
fable_js/native/: Cargo.toml
fable_js/native/src/: lib.rs
fable_launch/: Cargo.toml
fable_launch/src/: lib.rs
fable_pdb_bindgen/: Cargo.toml
fable_randize/: Cargo.toml
fable_stb_swap/: Cargo.toml
fable_tools/: Cargo.toml
fablec/: Cargo.toml  readme.md
fool/: Cargo.toml
format/: Cargo.toml
manip/: Cargo.toml
manip/src/: main.rs
minilzo/: build.rs
minilzo-rs/: Cargo.toml  build.rs
minilzo_rs/: Cargo.toml
open-albion/: Cargo.toml
open_albion/: .gitignore  Cargo.toml  build.rs  readme.md
open_albion/resources/shaders/: fragment.glsl
open_albion/shaders/: g_buffer.vert  lighting.frag  shader.frag
open_albion/src/: app.rs  game.rs  main.rs  renderer.rs  settings.rs  shader.vert  state.rs
open_albion/src/app/: mod.rs
open_albion/src/renderer/: base.rs  gui.rs  landscape.rs  level_view.rs  mod.rs  model_manager.rs  model_view.rs  pbr.rs  scene.rs  scene.wgsl  text.rs
open_albion/src/renderer/pbr/: megabuffer.rs
open_albion/src/renderer_old/: console.rs  mod.rs
open_albion/src/shaders/: light.frag  text.frag  text.vert
open_albion/src/state/: mod.rs
open_albion/src/view/: mod.rs
open_albion/wix/: main.wxs
parser/: Cargo.toml  Makefile  license  package.json  tsconfig.json
refable/: Cargo.toml
renderer/: Cargo.toml
src/: app.js  bba.rs  bbm.rs  big.rs  bin.rs  bncfg.rs  dll.rs  gtg.rs  hack.rs  hook.rs  inject.rs  injector.rs  lev.rs  lib.rs  lut.rs  main.js  main.rs  met.rs  parser.rs  pga3d.rs  qst.rs  renderer.rs  shared.rs  state.rs  stb.rs  stb_lev.rs  tng.rs  wad.rs
tlse/: .gitignore  Cargo.toml  build.rs  dllmain.cpp  pch.h  tlse.sln  tlse.vcxproj
tlse/src/: main.rs
tlse_dissect/: Cargo.toml  readme.md
tlse_hack/: Cargo.toml
tlse_hack/src/: lib.rs  loc.rs
tlse_loader/: Cargo.toml
(+702 files in other folders)
