[package]
name = "open_albion"
version = "0.1.0"
authors = ["Jamen Marz <me@jamen.dev>"]
edition = "2018"
license = "Zlib"
homepage = "https://github.com/jamen/open_albion"
repository = "https://github.com/jamen/open_albion"

[dependencies]
winit = "0.25.0"
wgpu = "0.9.0"
glam = { version = "0.15.1", features = [ "mint" ] }
tokio = { version = "1.7.0", features = [ "rt-multi-thread", "net", "time", "sync", "macros" ] }
fable_data = { path = "fable_data" }
bytemuck = "1.7.0"
crevice = "0.6.0"
native-dialog = "0.5.5"
log = "0.4.14"
env_logger = "0.9.0"
mint = "0.5.6"
rand = "0.8.4"

[workspace]
members = [ "fable_data" ]