[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
env_logger = "0.9.0"
format = { path = "./crates/format" }
futures = { version = "0.3", default-features = false, features = ["executor"] }
log = "0.4.17"
raw-window-handle = "0.5.2"
renderer = { path = "./crates/renderer" }
thiserror = "1.0.40"
wgpu = "0.16.0"
winit = { version = "0.27.5", default-features = false, features = ["x11"] }
bytemuck = { version = "1.13.1", features = ["derive"] }
