[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
env_logger = "0.10.0"
format = { path = "./crates/format" }
log = "0.4.19"
raw-window-handle = "0.5.2"
renderer = { path = "./crates/renderer" }
wgpu = "0.16.0"

[workspace.dependencies.bytemuck]
features = ["derive"]
version = "1.13.1"

[workspace.dependencies.futures]
default-features = false
features = ["executor"]
version = "0.3"

[workspace.dependencies.derive_more]
default-features = false
features = ["from", "display"]
version = "0.99.17"

[workspace.dependencies.winit]
default-features = false
features = ["x11"]
version = "0.27.5"
