[package]
name = "open-albion"
version = "0.1.0"
authors = ["Jamen Marz <me@jamen.dev>"]
edition = "2021"
license = "Zlib"
homepage = "https://github.com/jamen/open_albion"
repository = "https://github.com/jamen/open_albion"

[dependencies]
bytemuck = "1.7.0"
crevice = "0.6.0"
dirs = "3.0.2"
env_logger = "0.9.0"
fable-data = { path = "../fable-data" }
flume = "0.10.9"
glam = { version = "0.15.1", features = [ "mint" ] }
log = "0.4.14"
mint = "0.5.6"
native-dialog = "0.5.5"
rand = "0.8.4"
rend3 = "0.2.0"
serde = "1.0.130"
thiserror = "1.0.29"
tokio = { version = "1.7.0", features = [ "rt-multi-thread", "net", "time", "sync", "macros" ] }
wgpu = "0.11.0"
winit = "0.25.0"
