[package]
name = "defable"
version = "0.1.0"
authors = ["Jamen Marz <me@jamen.dev>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
winapi = { version = "0.3.8", features = ["std","impl-default","processthreadsapi","memoryapi","psapi","handleapi","synchapi","winbase","minwinbase","libloaderapi","errhandlingapi","winuser","consoleapi","fileapi","tlhelp32","winerror","wincon","d3d9"] }
fable_hack = { path = "../fable_hack" }

[package.metadata.wix]
input = "wix/main.wxs"
output = "../target"