[package]
name = "fable_data"
version = "0.1.0"
authors = ["Jamen Marz <me@jamen.dev>"]
edition = "2021"
license = "Zlib"
homepage = "https://github.com/jamen/open_albion"
repository = "https://github.com/jamen/open_albion"

[dependencies]
miniz_oxide = "0.5.1"
regex = "1.5.4"
mint = "0.5.8"

[dependencies.lalrpop-util]
version = "0.19.6"
features = ["lexer"]

[dependencies.lzokay]
version = "1.0.1"
path = "../../lzokay-rs"
default-features = false
features = ["decompress", "compress", "alloc"]

[build-dependencies]
lalrpop = "0.19.6"

[features]
std = []