[package]
name = "fable_data"
version = "0.1.1"
authors = ["Jamen Marz <me@jamen.dev>"]
edition = "2018"
description = "A Rust library for using Fable's data."
readme = "readme.md"
license = "Zlib"
homepage = "https://github.com/jamen/fable_data"
repository = "https://github.com/jamen/fable_data"
documentation = "https://docs.rs/fable_data"

[dependencies]
nom = "7.1.1"