[package]
name = "fable_gltf"
version = "0.1.0"
authors = ["Jamen Marz <me@jamen.dev>"]
edition = "2018"

[dependencies]
fable_format = { git = "https://github.com/jamen/fable_format.git" }
gltf-json = "0.14.0"

[patch."https://github.com/jamen/fable_format.git"]
fable_format = { path = "../fable_format" }