[package]
name = "fable_launch"
version = "0.1.0"
authors = ["Jamen Marz <me@jamen.dev>"]
edition = "2018"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = ["std","processthreadsapi","libloaderapi","memoryapi","minwinbase","winbase","errhandlingapi","winnt","synchapi","handleapi"] }