[package]
name = "manip"
version = "0.1.0"
authors = ["Jamen Marz <me@jamen.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.8", features = ["winuser", "tlhelp32", "processthreadsapi", "handleapi", "errhandlingapi", "winerror", "impl-default"] }