[package]
name = "open-albion"
version = "0.1.0"
authors = ["Jamen Marz <me@jamen.dev>"]
edition = "2021"
license = "Zlib"
homepage = "https://github.com/jamen/open_albion"
repository = "https://github.com/jamen/open_albion"

[dependencies]
bytemuck = "1.7.3"
env_logger = "0.9.0"
etagere = "0.2.6"
fontdue = "0.7.2"
glam = "0.20.3"
log = "0.4.14"
range-alloc = "0.1.2"
raw-window-handle = "0.4.3"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = [ "rt-multi-thread" ] }
vk-shader-macros = "0.2.8"
wgpu = "0.12.0"
winit = { version = "0.26.1", default-features = false, features = [ "x11" ] }
