[package]
name = "client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "open_albion"
path = "main.rs"

[dependencies]
env_logger = "0.9.0"
futures = { version = "0.3", default-features = false, features = [ "executor" ] }
log = "0.4.17"
winit = { version = "0.27.5", default-features = false, features = [ "x11" ] }
renderer = { path = "../renderer" }
thiserror = "1.0.40"
