[package]
name = "data_formats"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
arrayvec = "0.7.6"
derive_more = { version = "1.0.0", features = ["from", "display"] }
fallible-iterator = "0.3.0"
serde = { version = "1.0.205", features = ["derive"] }
unicode-segmentation = "1.11.0"

[dependencies.bytemuck]
features = ["derive"]
version = "1.16.3"
