[package]
name = "defable"
version = "0.1.0"
authors = ["Jamen Marz <me@jamen.dev>"]
edition = "2018"

[[bin]]
name = "defable"
path = "src/bin/defable.rs"

[[bin]]
name = "defable_assets"
path = "src/bin/defable_assets.rs"

[dependencies]
clap = "2.33.0"
winapi = { version = "0.3.8", features = ["std","impl-default","processthreadsapi","memoryapi","psapi","handleapi","synchapi","winbase","minwinbase","libloaderapi","errhandlingapi","winuser","consoleapi","fileapi","tlhelp32","winerror","wincon","d3d9"] }
fable = { path = "../fable" }

[package.metadata.wix]
input = "wix/main.wxs"
output = "../../target"