[package]
name = "fable_cheat"
version = "0.1.0"
authors = ["Jamen Marz <me@jamen.dev>"]
edition = "2018"

[lib]
name = "fable_cheat"
crate-type = ["cdylib"]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = ["std","processthreadsapi","libloaderapi","memoryapi","minwinbase","winbase","errhandlingapi","winnt","winuser","consoleapi","fileapi"] }