[package]
name = "fable_dll_inject"
version = "0.1.0"
authors = ["Jamen Marz <me@jamen.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fable_base = "0.1.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = [ "std", "impl-default", "handleapi", "processthreadsapi", "memoryapi", "libloaderapi", "synchapi" ] }