[package]
name = "fable_hack"
version = "0.1.0"
authors = ["Jamen Marz <me@jamen.dev>"]
edition = "2018"

[lib]
name = "fable_hack"
crate-type = ["cdylib"]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = ["std","impl-default","processthreadsapi","libloaderapi","memoryapi","minwinbase","winbase","errhandlingapi","winnt","winuser","consoleapi","fileapi","errhandlingapi"] }