[package]
name = "fable_injector_32bit_helper"
version = "0.1.0"
authors = ["jamen"]
edition = "2018"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = ["std","processthreadsapi","libloaderapi","memoryapi","minwinbase","winbase","errhandlingapi","winnt","winuser","consoleapi","fileapi"] }