[package]
name = "fable_level"
version = "0.1.0"
authors = ["Jamen Marz <me@jamen.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fable_base = "0.1.0"
fable_archive = "0.1.0"
fable_script = "0.1.0"
fable_mesh = "0.1.0"