[package]
name = "fool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "fool"
path = "main.rs"

[dependencies]
asset_manager.workspace = true
env_logger.workspace = true
log.workspace = true
derive_more.workspace = true
