[package]
name = "client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "open_albion"
path = "src/main.rs"

[dependencies]
env_logger = "0.9.0"
futures = { version = "0.3", default-features = false, features = [ "executor" ] }
log = "0.4.17"
renderer = { path = "../renderer" }
winit = { version = "0.26.1", default-features = false, features = [ "x11" ] }
assets_pipeline = { path = "../assets_pipeline" }