[package]
name = "fable_js"
version = "0.1.0"
authors = ["Jamen Marz <me@jamen.dev>"]
license = "ISC"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "fable_js"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4.0"
