[package]
name = "defable"
version = "0.1.0"
authors = ["Jamen Marz <me@jamen.dev>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "defable"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.3"
cc = "1.0"

[dependencies]
neon = { version = "0.3.3" }
fable_injector = { version = "0.1.0" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = [ "std", "processthreadsapi" ] }